# Mario

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements-rl.txt
.github/workflow/: build.yml
.github/workflows/: build.yml  test.yml
assets/maps/1/: 1.txt  2.txt  3.txt
docs/: chat-change-log.md
myPixelArts/: coin1.pxo  coin2.pxo
rl/: __init__.py  dqn_agent.py  evaluate.py  mario_env.py  play.py  train.py  training_logger.py
source/: audio.cpp  audio.hpp  block.hpp  camera.cpp  camera.hpp  core.cpp  core.hpp  map.cpp  map.hpp  object.cpp  object.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  rl_environment.cpp  rl_environment.hpp  rl_renderer.cpp  rl_renderer.hpp  rsdl.cpp  rsdl.hpp  state.hpp  timer.hpp  world.cpp  world.hpp
source/objects/: block.hpp  brick.hpp  bullet.cpp  bullet.hpp  cloud.hpp  coin.hpp  coin_container.hpp  fire_block.hpp  flag.hpp  flower.cpp  flower.hpp  goomba.cpp  goomba.hpp  ground.hpp  health_block.hpp  koopa_troopa.cpp  koopa_troopa.hpp  mushroom.cpp  mushroom.hpp  object.cpp  object.hpp  pipes.hpp  text.hpp
tests/: rl_environment_smoke.cpp  test_rl_agent.py  test_training_logger.py
